--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,11 @@ body {
 }
 h1 {
   color: rgb(0, 0, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 100px;
 }
 p {
   color: rgb(0, 0, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 100px;
 }
