--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,14 @@ h3 {
   margin-right: 100px;
   margin-left: 100px;
 }
+h4 {
+  color: rgb(0, 0, 0);
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
 p {
   color: rgb(0, 0, 0);
   font-family: 'Courier New', Courier, monospace;
@@ -29,6 +37,17 @@ p {
   margin-bottom: 20px;
   margin-right: 100px;
   margin-left: 100px;
+}
+
+p.bold-quote {
+  font-style: italic;
+  font-weight: bold;
+  text-align: left;
+  text-indent: 20px;
+}
+
+p.bold {
+  font-weight: bold;
 }
 
 * {
@@ -41,7 +60,7 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: left;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 /* The article content */
@@ -50,17 +69,18 @@ article {
   -ms-flex: 3;
   flex: 3;
   background-color: #f3f2f1;
-  padding: 10px;
 }
 
 /* The footer */
 footer {
   background-color: #f3f2f1;
   text-align: left;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 a {
   font-family: 'Courier New', Courier, monospace;
-  padding: 100px;
+  margin-left: 100px;
 }
 /* unvisited link */
 a:link {
