--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,16 @@ h4 {
   margin-right: 100px;
   margin-left: 100px;
 }
+h5 {
+  color: rgb(0, 0, 0);
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
 p {
   color: rgb(0, 0, 0);
   font-family: 'Courier New', Courier, monospace;
@@ -90,8 +100,8 @@ article {
 footer {
   background-color: #f3f2f1;
   text-align: left;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 a.dev {
   font-family: 'Courier New', Courier, monospace;
