--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,8 @@ body {
 h1 {
   color: rgb(0, 0, 0);
   font-family: Arial, Helvetica, sans-serif;
-  margin: 100px;
+  font-size: 60px;
+  margin-left: 100px;
 }
 h2 {
   color: rgb(0, 0, 0);
@@ -56,6 +57,15 @@ ul.list {
   margin-bottom: 20px;
   margin-right: 100px;
   margin-left: 100px;
+}
+
+ul.list-ni {
+  color: rgb(0, 0, 0);
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 100px;
+  margin-left: 80px;
 }
 
 p.bold-quote {
