--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,15 @@ ul.list-ni {
   margin-left: 80px;
 }
 
+ol.list-no {
+  color: rgb(0, 0, 0);
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 100px;
+  margin-left: 80px;
+}
+
 p.bold-quote {
   font-weight: bold;
   text-align: left;
